@@ -1117,3 +1117,4 @@ $PMF_LANG['ad_search_delfail'] = 'Der Suchbegriff konnte nicht gelöscht werden.
 // added 2.7.1 - 2011-09-30 by Thorsten
 $PMF_LANG['msg_about_faq'] = 'Über diese FAQ';
 $LANG_CONF['security.useSslOnly'] = array(0 => 'checkbox', 1 => 'FAQ nur mit SSL nutzen (Standard: deaktiviert)');
+$PMF_LANG['msgTableOfContent'] = 'Inhaltsverzeichnis';
